# CryptoGateway

./: .gitignore  CMakeLists.txt  CryptoGateway.h  CryptoGateway.vcxproj  CryptoGateway.vcxproj - Shortcut.lnk  CryptoGateway.vcxproj.filters  CryptoGateway.vcxproj.filters - Shortcut.lnk  CryptoGatewayComplete.h  LICENSE  RC4.cpp  RC4.h  RC4_Hash.cpp  RC4_Hash.h  README.md  XMLEncryption.cpp  XMLEncryption.h  binaryEncryption.cpp  binaryEncryption.h  c_cryptoTesting.cpp  c_cryptoTesting.h  cryptoCHeaders.h  cryptoCSource.cpp  cryptoConstants.cpp  cryptoConstants.h  cryptoError.cpp  cryptoError.h  cryptoException.h  cryptoFrameworks.cpp  cryptoFrameworks.h  cryptoHash.cpp  cryptoHash.h  cryptoLogging.cpp  cryptoLogging.h  cryptoNumber.cpp  cryptoNumber.h  cryptoNumberTest.cpp  cryptoPublicKey.cpp  cryptoPublicKey.h  cryptoTest.cpp  cryptoTest.h  (+41 more)
C_Algorithms/: c_BaseTen.c  c_BaseTen.h  c_numberDefinitions.c  c_numberDefinitions.h  cryptoCConstants.h
Debug/: CL.read.1.tlog  CL.write.1.tlog  CryptoGateway.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
Documentation/: CryptoGatewayDocumentation.tex  build.bash  build.bat  documentation.tex  doxygenConfig  shortDocumentation.tex
Unix/: CryptoCompile.bash  CryptoGatewayUnixBuild.bash  CryptoUnixDeconstruct.bash  securitySpinLock.cpp  securitySpinLock.h
Unix/Unix/: CryptoCompile.bash  CryptoUnixBuild.bash
Unix/Windows/: CryptoWindowsBuild.bat
Windows/: CryptoGateway.vcxproj  CryptoGateway.vcxproj.filters  CryptoGatewayWindowsBuild.bat  CryptoWindowsBuild.bat  CryptoWindowsDeconstruct.bat  securitySpinLock.cpp
test/: CMakeLists.txt  c_cryptoTesting.cpp  c_cryptoTesting.h  cryptoFileTest.cpp  cryptoFileTest.h  cryptoNumberTest.cpp  cryptoTest.cpp  cryptoTest.h  gatewayTest.cpp  gatewayTest.h  hashTest.cpp  hashTest.h  publicKeyTest.h  staticTestKeys.cpp  staticTestKeys.h  streamTest.cpp  streamTest.h  testKeyGeneration.cpp  testKeyGeneration.h
